--- a/plat/src/main/resource/system.properties
+++ b/plat/src/main/resource/system.properties
@@ -1,5 +1,10 @@
-##debug 模式，开启自动登录super
-debugMode = true
+##deug 模式开启 自动登录super
+debugMode =false
+superManagerId =89757
 
-#超级管理员id
-superManager = 89757
+#文件路径配置
+pdf_path =/home/projects/pdf
+img_path =/home/projects/img
+
+#平台缓存器 true/false
+platCacheManager = true
